Fix spacing issues

--- a/blocks/element/__heart/element__heart.css
+++ b/blocks/element/__heart/element__heart.css
@@ -1,12 +1,13 @@
 .element__heart {
-    width: 21px;
-    height: 19px;
+    min-width: 21px;
+    min-height: 19px;
     border: 0;
     margin: 0;
     padding: 0;
     background-color: white;
     background-image: url("../../../images/heart_outline.svg");
     background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .element__heart:hover {
