--- a/blocks/header/__line/header__line.css
+++ b/blocks/header/__line/header__line.css
@@ -1,6 +1,6 @@
 .header__line {
     width: 100%;
-    border: 1px solid #545454;
+    border-bottom: 1px solid #545454;
     opacity: 0.7;
     margin: 0;
     padding: 0;
