--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,5 @@
 .profile__info {
-    margin: 30px auto 0;
+    margin: 30px auto 36px;
 }
 
 @media screen and (min-width: 700px) {
