--- a/blocks/profile/__name-group/profile__name-group.css
+++ b/blocks/profile/__name-group/profile__name-group.css
@@ -1,4 +1,4 @@
 .profile__name-group {
-    display: flex;
+    display:inline-flex;
     align-items: center;
 }
