--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,17 +4,17 @@
     margin-right: 10px;
 }
 
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 700px) {
     .profile__name {
-        font-size: 42px;
+        font-size: 28px;
         margin-right: 18px;
         line-height: 1.14;
     }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1080px) {
     .profile__name {
-        font-size: 28px;
+        font-size: 42px;
         margin-right: 18px;
         line-height: 1.14;
     }
