--- a/blocks/profile/__subheading/profile__subheading.css
+++ b/blocks/profile/__subheading/profile__subheading.css
@@ -2,6 +2,7 @@
     font-size: 14px;
     text-align: center;
     margin-top: 14px;
+    margin-bottom: 0;
 }
 
 @media screen and (min-width: 700px) {
